--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/GOOGLE_MAPS_API_KEY"/>
+
         <activity
             android:name=".login.ui.LoginActivity"
             android:noHistory="true">
@@ -25,6 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".signup.ui.SignupActivity">
+        </activity>
+        <activity android:name=".appointments.ui.AppointmentsActivity">
         </activity>
     </application>
 
