--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".ClinicAppointmentsApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,8 +20,7 @@
             android:value="@string/GOOGLE_MAPS_API_KEY"/>
 
         <activity
-            android:name=".login.ui.LoginActivity"
-            android:noHistory="true">
+            android:name=".login.ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -28,6 +28,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".signup.ui.SignupActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".login.ui.LoginActivity"/>
         </activity>
         <activity android:name=".appointments.ui.AppointmentsActivity">
         </activity>
