--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/GOOGLE_MAPS_API_KEY"/>
 
-        <activity
-            android:name=".login.ui.LoginActivity">
+        <activity android:name=".login.ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -36,6 +35,11 @@
             android:name=".appointments.ui.AppointmentsActivity"
             android:label="Appointments"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".addappointment.ui.AddAppointmentActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".appointments.ui.AppointmentsActivity"/>
         </activity>
     </application>
 
